--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,7 @@ body {
   justify-content: center; /* ✅ aligns text to the center */
   align-items: flex-start;  
   text-align: center;          
-  padding: 3rem 1.5rem;
+  padding: 2rem 1.5rem;
   background-image: 
   linear-gradient(rgba(0, 90, 156, 0.5), rgba(0, 90, 156, 0.6)),
   url('https://images.unsplash.com/photo-1556761175-5973dc0f32e7?q=80&w=2832&auto=format&fit=crop');
@@ -117,7 +117,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
-  min-height: 450px;
+  min-height: 70vh;
   color: #fff;
   padding-top: 6rem;
 }
